[bugfix] Tab: hide scrollbar in mobile safari

--- a/packages/vant-css/src/tab.css
+++ b/packages/vant-css/src/tab.css
@@ -74,11 +74,9 @@ $van-tabs-card-height: 28px;
     .van-tabs__nav {
       overflow-x: auto;
       overflow-y: hidden;
-      -webkit-overflow-scrolling: touch;
 
       &::-webkit-scrollbar {
         display: none;
-        background: transparent;
       }
     }
   }
